Added genres and website link to artist profile
